--- a/loginpage.css
+++ b/loginpage.css
@@ -27,7 +27,7 @@ label {
     color: #666;
 }
 
-input[type="text"], input[type="password"] {
+input[type="text"], input[type="password"], input[type="email"] {
     width: calc(100% - 20px);
     padding: 10px;
     margin-top: 5px;
